Bug 598812 - Fix time attribute of audio available event. r=cpearce a=blocking2.0